--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase-admin": "^12.7.0",
     "node-fetch": "^3.3.2"
   }
 }
